# osu_replay_reader

./: .gitignore  .gitmodules  __init__.py  pyproject.toml  requirements.txt  test.py
demos/: demo0.py
replay_reader/: gamemode.py  mod.py  replay.py  replayIO.py  replay_idx.py
replay_reader/unit_tests/: test_replay.py
scripts/: clean.bat  demo.bat
src/: __init__.py  replay.py  replayIO.py
tests/unit_tests/: test_replay.py
unit_tests/: test_replay.py
